--- a/index.html
+++ b/index.html
@@ -32,28 +32,32 @@
                         console.log(superInnerSnapshot.val()['file_url']);
                         var image = superInnerSnapshot.val()['file_url'];
                         var thumbnail = superInnerSnapshot.val()['thumbnail_url'];
-                        $("#stories").append('<div class="circular--portrait"><a data-fancybox="images" data-caption="Story #" href="' + image + '"> <img src="' + thumbnail + '"></a></div>');
+                        $("#stories").append('<div class="circular--portrait">' +
+                            '<a data-fancybox="images" data-caption="Story #" href="' + image + '">' +
+                            ' <img class="rotate90" src="' + thumbnail + '">' +
+                            '</a>' +
+                            '</div>');
                     });
                 }
             });
         });
         /*users.on('child_added', function (snapshot) {
-            var user = snapshot.val();
-            //console.log(user);
-            var stories = firebase.database().ref('/users/' + Object.keys(user)[0] + "/stories/");
-            stories.on('value', function (innerSnapshot) {
-                console.log(innerSnapshot.val());
-                for (var prop in innerSnapshot.val()) {
-                    var story = firebase.database().ref('/users/' + Object.keys(user)[0] + "/stories/" + prop);
-                    story.on('value', function (superInnerSnapshot) {
-                        console.log(superInnerSnapshot.val()['file_url']);
-                        var image = superInnerSnapshot.val()['file_url'];
-                        var thumbnail = superInnerSnapshot.val()['thumbnail_url'];
-                        $("#stories").append('<div class="circular--portrait"><a data-fancybox="images" data-caption="Story #" href="' + image + '"> <img src="' + thumbnail + '"></a></div>');
-                    });
-                }
-            });
-        });*/
+         var user = snapshot.val();
+         //console.log(user);
+         var stories = firebase.database().ref('/users/' + Object.keys(user)[0] + "/stories/");
+         stories.on('value', function (innerSnapshot) {
+         console.log(innerSnapshot.val());
+         for (var prop in innerSnapshot.val()) {
+         var story = firebase.database().ref('/users/' + Object.keys(user)[0] + "/stories/" + prop);
+         story.on('value', function (superInnerSnapshot) {
+         console.log(superInnerSnapshot.val()['file_url']);
+         var image = superInnerSnapshot.val()['file_url'];
+         var thumbnail = superInnerSnapshot.val()['thumbnail_url'];
+         $("#stories").append('<div class="circular--portrait"><a data-fancybox="images" data-caption="Story #" href="' + image + '"> <img src="' + thumbnail + '"></a></div>');
+         });
+         }
+         });
+         });*/
     </script>
     <style>
         #stories {
@@ -68,8 +72,8 @@
 
         .circular--portrait {
             position: relative;
-            width: 100px;
-            height: 100px;
+            width: 50px;
+            height: 50px;
             overflow: hidden;
             border-radius: 100%;
             border: solid 5px white;
@@ -80,8 +84,19 @@
         }
 
         .circular--portrait img {
-            width: 100%;
+            width: auto;
             height: auto;
+        }
+
+        .rotate90 {
+            width: 100px;
+            height: 100px;
+            margin-left: -100%;
+            -webkit-transform: rotate(90deg);
+            -moz-transform: rotate(90deg);
+            -o-transform: rotate(90deg);
+            -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
         }
     </style>
 
@@ -91,21 +106,7 @@
 </head>
 <body>
 <div id="stories">
-    <!--<div class="circular--portrait">
-        <a data-fancybox="images" data-caption="Story #1" href="img/big_0.jpg">
-            <img src="img/small_0.png">
-        </a>
-    </div>
-    <div class="circular--portrait">
-        <a data-fancybox="images" data-caption="Story #2" href="img/big_1.jpg">
-            <img src="img/small_1.jpg">
-        </a>
-    </div>
-    <div class="circular--portrait">
-        <a data-fancybox="images" data-caption="Story #3" href="img/big_2.jpg">
-            <img src="img/small_2.jpg">
-        </a>
-    </div>-->
+
 </div>
 </body>
 </html>
